2011-08-14  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/generic/ldsodefs.h (struct unique_sym): Add a const.
	* elf/rtld.c (dl_main): Invert order of assignment in last change,
	to avoid a warning.

2011-08-14  David S. Miller  <davem@davemloft.net>

	* sysdeps/unix/sysv/linux/sparc/bits/resource.h (RLIM_INFINITY,
	RLIM64_INFINITY): Fix 64-bit values for 32-bit sparc.

2011-08-13  Ulrich Drepper  <drepper@gmail.com>

	* elf/dl-open.c: Rename show_scope to _dl_schow_scope and export.
	(dl_open_worker): Call _dl_show_scope when DL_DEBUG_SCOPES is set.
	* elf/rtld.c (dl_main): Set l_name of vDSO.
	Call _dl_show_scope when DL_DEBUG_SCOPES.
	(process_dl_debug): Recognize scopes flag and also set it for all.
	* sysdeps/generic/ldsodefs.h: Define DL_DEBUG_SCOPES.
	Declare _dl_show_scope.

	* elf/dl-libc.c (do_dlopen_args): Add caller_dlopen.
	(do_dlopen): Pass caller_dlopen to dl_open.
	(__libc_dlopen_mode): Initialize caller_dlopen.

	* intl/l10nflist.c (_nl_normalize_codeset): Make it compile outside
	of libc.  Make tolower call locale-independent.  Optimize a bit by
	using isdigit instead of isalnum.
	* locale/Makefile (locale-CPPFLAGS): Add -DNOT_IN_libc.

2011-08-12  Ulrich Drepper  <drepper@gmail.com>

	* elf/dl-load.c (_dl_map_object): Show in debug output whether a DSO
	was a dependency or dynamically loaded.

2011-08-11  Ulrich Drepper  <drepper@gmail.com>

	* intl/l10nflist.c: Allow architecture-specific pop function.
	* sysdeps/x86_64/l10nflist.c: New file.

	* intl/l10nflist.c (_nl_make_l10nflist): Use locale-independent
	classification.

2011-08-10  Andreas Schwab  <schwab@redhat.com>

	* include/dirent.h: Add libc_hidden_proto for scandirat and
	scandirat64.  Don't declare __scandirat64.
	* dirent/scandirat.c: Add libc_hidden_def.
	* dirent/scandirat64.c (SCANDIRAT): Remove underscores.
	* sysdeps/unix/sysv/linux/i386/scandir64.c (SCANDIRAT): Likewise.

2011-08-10  David S. Miller  <davem@davemloft.net>
